2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tests/Captc-translates.sh: Rename this...
	* tests/Captc-string-translates.sh: ...to this, for better
	consistency with test script naming scheme, which parallels the
	interface description practice in groff_mm(7).

2026-01-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tests/Np-register-works.sh:
	* tests/date-localization-works.sh:
	* tests/nP-works.sh: Avoid use of "cat -s" in test scripts.
	It's not portable.  Omit entirely or replace with (not
	equivalent but close enough for our purposes) "sed '/^$/d'".
	Fixes spurious test failure on Alpine Linux.  Thanks to Bruno
	Haible for the report.

2026-01-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mm.am: Drop unused macro `mm_builddir`.  Automake itself
	doesn't require it, and we never interpolate it.

2026-01-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac: Initialize register `Le` to `1`, not `0`.  This makes
	its default consistent with the `Lf`, `Lt`, and `Lx` registers
	of similar purpose, but inconsistent with DWB 3.3 mm.
	Explicitly assigning the `Le` register in a document's preamble
	continues to work as it always has.

	* groff_mm.7.man (Description): Document it.

	* tests/toc-captions-ident-correctly.sh: Update test input to
	omit explicit `Le` assignment, and thereby regression-test this
	change.

	Fixes <https://savannah.gnu.org/bugs/?67907>.

2026-01-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m.tmac (AST, ISODATE, GETHN, GETPN, GETR, IND, INDP, FC, AV)
	(AVL): Fix botched diagnostic argument dumping, which caused
	spurious output to the standard error stream with any use of
	these macros.
	(IE, WE): Same, but also sequence the argument dump _after_
	these macro's `ec` invokations so we can accurately dump them.
	See "Punning Names" in our Texinfo manual or in groff(7).

2026-01-13  G. Branden Robinson <g.branden.robinson@gmail.com>
