@@ -1,3 +1,12 @@
+2026-02-16  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	Add regression test for Savannah #68052.  Nested marked lists
+	{`ML`} were using incorrect item marks after popping a nesting
+	level with `LE`.
+
+	* tests/marks-in-nested-ML-lists-are-correct.sh: Do it.
+	* mm.am (mm_TESTS): Run test.
+
 2026-01-29  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* tests/Captc-translates.sh: Rename this...
